[tool.poetry]
package-mode = false
name = "langchain-sandbox"
version = "0.1.0"
description = "LangChain sandbox"
authors = ["Felipe Ortega <felipeortegabustamante@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.1"
langchain-community = "^0.2.1"
langchain-openai = "^0.1.7"
beautifulsoup4 = "^4.12.3"
faiss-cpu = "^1.8.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
